
  Instead, use following:

  ```java
    ExecutionInfoFormatter formatter = ExecutionInfoFormatter.showAll();
    builder.onSlowQuery(threashold, timeunit, queryInfo -> {
      String log = formatter.format(queryInfo);  // convert to String
      logger.warn(log);  // write log
    });

  ```


* Added `ExecutionInfoFormatter` and `ExecutionInfoJsonFormatter` to replace
  `QueryLogEntryCreator`.
  `OutputParameterFormatterSupport` is added to replace `OutputParameterLogEntryCreator`

* Removed query count logging support using spring `HandlerInterceptor`
  - net.ttddyy.dsproxy.support.AbstractQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.QueryCounterClearHandlerInterceptor
  - net.ttddyy.dsproxy.support.JULQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.SystemOutQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.CommonsQueryCountLoggingHandlerInterceptor

* Removed spring related classes
  - net.ttddyy.dsproxy.support.BeanNameProxyDataSource
  - net.ttddyy.dsproxy.support.DataSourceProxyNativeJdbcExtractor

* Removed AOP alliance related class
  - net.ttddyy.dsproxy.support.ProxyConnectionAdvice

* `ProxyDataSourceListener`
  - `MethodExecutionListener` and `QueryExecutionListener` are combined to `ProxyDataSourceListener`
  - `ChainListener` and `CompositeMethodListener` are combined to `CompositeProxyDataSourceListener`

  - `ProxyConfig#getMethodListener` and `ProxyConfig#getQueryListener` are changed to `ProxyConfig#getListener`

  Removed:
  - net.ttddyy.dsproxy.listener.NoOpQueryExecutionListener
  - net.ttddyy.dsproxy.listener.NoOpMethodExecutionListener
  - net.ttddyy.dsproxy.listener.ChainListener
  - net.ttddyy.dsproxy.listener.CompositeMethodListener

  TODO:
  - Update documentation for `ChainListener`

* `TracingMethodListener`
  - TracingMethodListener#TracingCondition => BooleanSupplier